--- a/src/styles/mainSection/cowCone.module.scss
+++ b/src/styles/mainSection/cowCone.module.scss
@@ -1,47 +1,58 @@
 @use "/src/styles/mixins" as *;
 
-.cowConeContainer {
+.container {
   position: relative;
-  z-index: 2;
-  // width: 70%;
-  // min-width: 858px;
+  min-width: 657px;
+  max-width: 657px;
   height: auto;
-  // align-self: flex-end;
-  margin-bottom: -221px;
-  margin-left: -134px;
-  margin-right: -150px;
-
-  @include mrwd(1330px) {
-      // margin-left: -25%;
-      // width: 600px;
-      // margin-right: 30%;
-  }
-  @include mrwd(991px) {
-      width: 408px;
-      height: auto;
-      margin-left: -175px;
-      margin-bottom: -109px;
-      margin-right: 0;
-  }
-  // width: auto;
+  // z-index: 2;
   // animation: slideIn 2s forwards;
 
+  @include mrwd(991px) {
+    min-width: 343px;
+    max-width: 343px;
+    height: auto;
+    margin-left: -120px;
+  }
 }
 
 .cowCone {
-  // margin-bottom: -213px;
   padding: 0;
-
-  @include mrwd(991px) {
-      width: 100%;
-      height: 100%;
-      // margin: 0;
-  }
   top: 0;
+  width: 100%;
+  height: 100%;
+  margin-bottom: -202px;
+  margin-right: -35px;
+  
+  @include mrwd(991px) {
+    margin-bottom: -109px;
+    margin-right: 0;
+  }
+}
 
-  position: relative;
-  // height: min-content;
+.cowHand {
+}
 
-  z-index: 2;
-  // width: 100%;
+.cowHandAnimate {
+  position: absolute;
+  top: 28%;
+  left: 54%;
+
+  .cowHandImg {
+    animation: wave 2s infinite ease-in-out;
+    position: absolute;
+    // z-index: 0;
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-100%);
+  }
+  70% {
+    transform: translateX(2%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
 }
